--- a/html/index.xhtml
+++ b/html/index.xhtml
@@ -5,8 +5,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
     <title>Title</title>
+    <meta name="author" content="Gwendal LOTTIN" />
+    <link rel="stylesheet" type="text/css" href="../styles/global.css" />
 </head>
-<body>
+<body onload="init();minisommaire();">
+    <div id="header">
 
+    </div>
+    <h1>Osu! - Pr&eacute;sentation du jeu</h1>
+
+    <div id="gameGeneral" class="section">
+        <h2>En général</h2>
+        <p>
+            <span class="italic">
+                Osu!
+            </span>
+            est un jeu de rythme d&eacute;velopp&eacute; en 2007 en C# par <span class="italic">Dean « peppy » Herbert</span>. Comme tout jeu de rythme, le but du jeu est de réaliser des actions
+            en accord avec la musique. Selon la précision des actions effectuées, vous gagnez plus ou moins de points et gagnez donc plus ou moins de places dans le classement général.<br />
+            Sur <span class="italix">Osu!</span>, les possibilités de jeu ne sont limitées qu'à l'imagination des joueurs. N'importe quelle musique peut être ajoutée dans le jeu, puis travaillée pour la mettre à disposition des joueurs sous forme d'une <a class="definition" title="Une beatmap est une musique prête à jouer sur Osu!. Elle comprend une musique, parfois une vidéo, et l'ensemble des actions à réaliser à des temps très précis, en rythme avec la musique. Ces informations sont codées en JSON et interprétées par le jeu">beatmap</a> . <br />
+            Pour vous donner une idée, des exemples de <a class="definition" title="Vidéo de quelqu'un jouant à Osu!">gameplay</a> sont disponibles depuis le sommaire accessible en bas de page<br />
+            Si vous souhaitez installer le jeu et essayer par vous-même, vous pouvez télécharger le jeu en fonction de votre système d'exploitation (Non disponible sur les systèmes GNU/Linux pour le moment): <br />
+            <a href="https://m1.ppy.sh/r/osu!install.exe">Osu! pour Windows</a> <a href="http://osuosx.tumblr.com/">Osu! pour OSX</a>
+        </p>
+    </div>
+    <div id="gameModes" class="section">
+        <h2>Modes de jeu</h2>
+        <div id="modes">
+        </div>
+    </div>
+
+    <script type="text/javascript" src="../javascript/index.js"></script>
+    <script type="text/javascript" src="../javascript/global.js"></script>
 </body>
 </html>
