--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" type="text/css" href="../styles/classes.css" />
     <link rel="stylesheet" type="text/css" href="../styles/ids.css" />
 </head>
-<body onload="init();minisommaire();">
-    <div id="header">
+<body onload="init();header();">
+<div id="header">
 
-    </div>
+</div>
     <h1>Osu! - Pr&eacute;sentation du jeu</h1>
 
     <div id="gameGeneral" class="section">
@@ -22,7 +22,7 @@
             <span class="italic">
                 Osu!
             </span>
-            est un jeu de rythme d&eacute;velopp&eacute; en 2007 en C# par <span class="italic">Dean « peppy » Herbert</span>. Comme tout jeu de rythme, le but du jeu est de r&eacute;aliser des actions
+            est un jeu de rythme d&eacute;velopp&eacute; en 2007 en C# par <span class="italic">Dean &laquo; peppy &raquo; Herbert</span>. Comme tout jeu de rythme, le but du jeu est de r&eacute;aliser des actions
             en accord avec la musique. Selon la pr&eacute;cision des actions effectu&eacute;es, vous gagnez plus ou moins de points et gagnez donc plus ou moins de places dans le classement g&eacute;n&eacute;ral.<br />
             Sur <span class="italix">Osu!</span>, les possibilit&eacute;s de jeu ne sont limit&eacute;es qu'&agrave; l'imagination des joueurs. N'importe quelle musique peut &ecirc;tre ajout&eacute;e dans le jeu, puis travaill&eacute;e pour la mettre &agrave; disposition des joueurs sous forme d'une <a class="definition" title="Une beatmap est une musique pr&ecirc;te &agrave; jouer sur Osu!. Elle comprend une musique, parfois une vid&eacute;o, et l'ensemble des actions &agrave; r&eacute;aliser &agrave; des temps tr&egrave;s pr&eacute;cis, en rythme avec la musique. Ces informations sont cod&eacute;es en JSON et interpr&eacute;t&eacute;es par le jeu">beatmap</a> . <br />
             Pour vous donner une id&eacute;e, des exemples de <a class="definition" title="Vid&eacute;o de quelqu'un jouant &agrave; Osu!">gameplay</a> sont disponibles depuis le sommaire accessible en bas de page<br />
@@ -45,6 +45,8 @@
     </div>
 
     <p id="sommaire"><a href="sommaire.html">Acc&egrave;s au sommaire</a></p>
+
+
     <script type="text/javascript" src="../javascript/index.js"></script>
     <script type="text/javascript" src="../javascript/global.js"></script>
 </body>
